# v_packfile_util

./: .gitignore  Cargo.toml  README.md  about.toml  generated_licenses.txt
.github/workflows/: ci.yml  release.yml
crates/v_commands/: Cargo.toml
crates/v_meshdump/: Cargo.toml
crates/v_model_viewer/: Cargo.toml
crates/v_model_viewer/src/: app.rs  lib.rs  main.rs
crates/v_model_viewer/src/app/: data.rs  style.rs  ui.rs  widgets.rs
crates/v_model_viewer/src/app/ui/: menu_bar.rs  model_view.rs
crates/v_model_viewer/src/app/ui/model_view/: mesh_resources.rs  resources.rs  shad.wgsl
crates/v_model_viewer/src/app/ui/model_view/resources/: solid.rs  wireframe.rs
crates/v_model_viewer/src/app/widgets/: log_view.rs  mesh_inspector.rs  static_mesh_inspector.rs  status_page.rs  tab.rs  vector_display.rs
crates/v_modelview/: Cargo.toml  build.rs
crates/v_modelview/src/: app.rs  lib.rs  main.rs  model_data.rs
crates/v_modelview/src/app/: data.rs  shortcuts.rs  style.rs  ui.rs  widgets.rs
crates/v_modelview/src/app/data/: app_state.rs  logger.rs
crates/v_modelview/src/app/ui/: about_dialog.rs  menu_bar.rs  model_view.rs
crates/v_modelview/src/app/ui/model_view/: resources.rs
crates/v_modelview/src/app/ui/model_view/resources/: beautiful.rs  shad_0uv.wgsl  shad_1uv.wgsl  shad_beautiful.wgsl  shad_solid.wgsl  shad_wireframe.wgsl  solid.rs  wireframe.rs
crates/v_modelview/src/app/widgets/: action_row.rs  float_display.rs  lod_mesh_inspector.rs  log_view.rs  mesh_inspector.rs  quat_display.rs  static_mesh_inspector.rs  status_page.rs  vector_display.rs
repo-tools/: generate_licenses.py  verify_spdx.py
src/: error.rs  lib.rs  main.rs  tools.rs  types.rs  util.rs
src/tools/: pack.rs  (+1 more)
(+19 files in other folders)
