[workspace]
resolver = "2"
members = [
  "crates/v_commands",
  "crates/v_model_viewer",
  "crates/v_packer",
  "crates/v_types",
]

[workspace.package]
version = "0.1.0"
license = "MPL-2.0"
edition = "2024"

[workspace.dependencies]
v_types = { path = "crates/v_types" }
v_commands = { path = "crates/v_commands" }