[package]
name = "v_model_viewer"
version.workspace = true
edition.workspace = true
license = "AGPL-3.0-or-later"

[dependencies]
v_types = { workspace = true }
egui = "0.34.2"
eframe = "0.34.2"
egui_extras = { version =  "0.34.2" }
rfd = "0.17.2"
wgpu = "29.0.3"
bytemuck = "1.25.0"
egui-wgpu = "0.34.2"
glam = "0.32.1"

