[package]
name = "v_modelview"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
v_types = { workspace = true }
egui = "0.34.2"
eframe = "0.34.2"
egui_extras = { version = "0.34.2", features = ["image", "svg"] }
rfd = "0.17.2"
wgpu = "29.0.3"
bytemuck = "1.25.0"
egui-wgpu = "0.34.2"
glam = "0.32.1"
image = "0.25.10"
gltf = "1.4.1"
